--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,25 +1,37 @@
 spring:
   datasource:
-    url: ${DEV_DATABASE_URL}
-    username: ${SPRING_DATASOURCE_USERNAME}
-    password: ${SPRING_DATASOURCE_PASSWORD}
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://${DEV_DB_HOST}:3306/${DEV_DB_NAME:love_keeper}?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: ${DEV_DB_USERNAME}
+    password: ${DEV_DB_PASSWORD}
     hikari:
-      maximum-pool-size: 10
-      minimum-idle: 5
-      connection-timeout: 20000
-      idle-timeout: 300000
-      max-lifetime: 1200000
       pool-name: HikariCP-Dev
 
+  # Redis 설정
+  data:
+    redis:
+      host: ${DEV_REDIS_HOST}
+      timeout: 2000ms
+      lettuce:
+        pool:
+          max-active: 8
+          max-idle: 8
+          min-idle: 0
+
+  # JPA 설정 (개발 환경)
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
-        format_sql: true
-        use_sql_comments: true
+        format_sql: false
         jdbc:
-          lob:
-            non_contextual_creation: true
+          batch_size: 1000
+        connection:
+          provider_disables_autocommit: false
+
+# 로깅 설정 (개발 환경)
+logging:
+  level:
+    org.hibernate.SQL: warn
+    org.springframework.jdbc.core: warn
