--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,12 @@ dependencies {
     implementation 'net.nurigo:sdk:4.2.7'                                        // Solapi(CoolSMS) SMS 발송 서비스
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'     // Swagger/OpenAPI 문서화 및 UI
 
+    // QueryDSL dependencies
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'                     // QueryDSL JPA support for Jakarta EE
+    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'               // QueryDSL annotation processor for Jakarta EE
+    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'              // Jakarta annotation API
+    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'            // Jakarta persistence API
+
     // 컴파일 타임 전용 (런타임에 포함되지 않음)
     compileOnly 'org.projectlombok:lombok'                                       // 코드 생성 라이브러리 (getter, setter 등)
 
@@ -60,4 +66,22 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()  // JUnit 5 플랫폼 사용
+}
+
+// QueryDSL 설정
+def generated = 'src/main/generated'
+
+// querydsl QClass 파일 생성 위치를 지정
+tasks.withType(JavaCompile).configureEach {
+    options.getGeneratedSourceOutputDirectory().set(file(generated))
+}
+
+// java source set 에 querydsl QClass 위치 추가
+sourceSets {
+    main.java.srcDirs += [ generated ]
+}
+
+// gradle clean 시에 QClass 디렉토리 삭제
+clean {
+    delete file(generated)
 }
