--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,8 @@ dependencies {
 
     // QueryDSL dependencies
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'                     // QueryDSL JPA support for Jakarta EE
-    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'               // QueryDSL annotation processor for Jakarta EE
+    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
+    // QueryDSL annotation processor for Jakarta EE
     annotationProcessor 'jakarta.annotation:jakarta.annotation-api'              // Jakarta annotation API
     annotationProcessor 'jakarta.persistence:jakarta.persistence-api'            // Jakarta persistence API
 
@@ -62,6 +63,10 @@ dependencies {
     // Spring Boot 테스트 스타터 (JUnit 5, Mockito 등)
     testImplementation 'org.springframework.security:spring-security-test'       // Spring Security 테스트 지원
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'                // JUnit Platform 런처
+
+    // AWS S3
+    implementation 'software.amazon.awssdk:s3:2.21.29'
+    implementation 'software.amazon.awssdk:auth:2.21.29'
 }
 
 tasks.named('test') {
@@ -78,7 +83,7 @@ tasks.withType(JavaCompile).configureEach {
 
 // java source set 에 querydsl QClass 위치 추가
 sourceSets {
-    main.java.srcDirs += [ generated ]
+    main.java.srcDirs += [generated]
 }
 
 // gradle clean 시에 QClass 디렉토리 삭제
