--- a/build.gradle
+++ b/build.gradle
@@ -64,9 +64,10 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'       // Spring Security 테스트 지원
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'                // JUnit Platform 런처
 
-    // AWS S3
-    implementation 'software.amazon.awssdk:s3:2.21.29'
-    implementation 'software.amazon.awssdk:auth:2.21.29'
+    // AWS SDK - BOM 사용으로 안정적 버전 관리
+    implementation platform('software.amazon.awssdk:bom:2.25.40')
+    implementation 'software.amazon.awssdk:s3'
+    implementation 'software.amazon.awssdk:auth'
 }
 
 tasks.named('test') {
