:sparkles: feat: add feedback response creation and update with enhanced content handling
- Implemented `FeedbackResponseDTO` to structure feedback responses, including title, content, and trainer details.
- Introduced inline image upload support and HTML sanitization for response content using `Jsoup` and `Apache Tika`.
- Enhanced error handling with custom exceptions (`FeedbackResponseException`, `FeedbackResponseErrorStatus`) for content validation and image uploads.
- Updated feedback response controller, service, and entity layers to handle the new DTO and business logic.
- Adjusted related DTO and entity names to align with naming conventions, e.g., `CreateFeedbackResponseRequestDTO`.
- Added `TrainerDTO` to encapsulate trainer details in feedback responses.

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     // 외부 라이브러리들
     implementation 'net.nurigo:sdk:4.2.7'                                        // Solapi(CoolSMS) SMS 발송 서비스
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'     // Swagger/OpenAPI 문서화 및 UI
+    implementation 'org.jsoup:jsoup:1.17.2'                                      // HTML 파싱 및 Sanitizing
+    implementation 'org.apache.tika:tika-core:2.9.2'                             // MIME 타입 판별
 
     // QueryDSL dependencies
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'                     // QueryDSL JPA support for Jakarta EE
