--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -14,6 +14,9 @@ spring:
   data:
     redis:
       host: ${DEV_REDIS_HOST}
+      port: 6379
+      ssl:
+        enabled: true
       timeout: 2000ms
       lettuce:
         pool:
@@ -48,3 +51,12 @@ aws:
     secret-key: ${AWS_SECRET_ACCESS_KEY}
     region: ${AWS_REGION}
     bucket-name: ${S3_BUCKET_NAME}
+
+server:
+  servlet:
+    session:
+      cookie:
+        http-only: true
+        secure: true          # 운영/Dev에서 HTTPS면 true
+        same-site: None       # 다른 도메인에서 쿠키 전송이 필요하면 None
+        path: /
