--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:local}
 
+  session:
+    store-type: redis
+    timeout: 7d
+
   # 공통 데이터소스 설정
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -34,6 +38,7 @@ spring:
   # 공통 세션 설정
   servlet:
     session:
+      store-type: redis
       timeout: 7d
       tracking-modes: cookie
     multipart:
