--- a/build.gradle
+++ b/build.gradle
@@ -28,13 +28,14 @@ dependencies {
     // 핵심 Spring Boot 스타터들
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'        // JPA 및 Hibernate ORM 지원
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'      // Redis 캐시 및 세션 저장소 지원
+    implementation 'org.springframework.session:spring-session-data-redis'        //Spring Session을 Redis에 저장하기 위한 의존성
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'   // OAuth2 클라이언트 (소셜 로그인)
     implementation 'org.springframework.boot:spring-boot-starter-security'        // Spring Security 인증/인가
     implementation 'org.springframework.boot:spring-boot-starter-validation'      // Bean Validation (JSR-303)
     implementation 'org.springframework.boot:spring-boot-starter-web'             // Spring MVC 웹 애플리케이션
     implementation 'org.springframework.boot:spring-boot-starter-mail'            // 이메일 발송 기능
     implementation 'org.springframework.boot:spring-boot-starter-actuator'        // 모니터링 및 관리 엔드포인트 (Health Check 등)
-
+    implementation 'com.fasterxml.jackson.core:jackson-databind'                  // JSON 직렬화
     // 외부 라이브러리들
     implementation 'net.nurigo:sdk:4.2.7'                                        // Solapi(CoolSMS) SMS 발송 서비스
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'     // Swagger/OpenAPI 문서화 및 UI
