--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -16,13 +16,21 @@ spring:
       host: ${DEV_REDIS_HOST}
       port: 6379
       ssl:
-        enabled: true
+        enabled: false
       timeout: 2000ms
       lettuce:
         pool:
           max-active: 8
           max-idle: 8
           min-idle: 0
+
+  session:
+    store-type: redis
+    timeout: 7d
+    redis:
+      namespace: tpt
+      flush-mode: on-save
+      repository-type: indexed
 
   # JPA 설정 (개발 환경)
   jpa:
