fix: 엘라스틱 캐시 관련 설정 변경

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -28,6 +28,7 @@ spring:
     store-type: redis
     timeout: 7d
     redis:
+      configure-action: none
       namespace: tpt
       flush-mode: on-save
       repository-type: indexed
