--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,6 +15,8 @@ spring:
     redis:
       host: ${DEV_REDIS_HOST}
       port: 6379
+      username: default
+      password: ${DEV_REDIS_PASSWORD}
       ssl:
         enabled: false
       timeout: 2000ms
