--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: TradingPT
 
   profiles:
-    active: ${SPRING_PROFILES_ACTIVE:local}
+    active: ${SPRING_PROFILES_ACTIVE}
 
   session:
     store-type: redis
@@ -70,7 +70,7 @@ spring:
             client-name: kakao
             client-id: ${KAKAO_CLIENT_ID}
             authorization-grant-type: authorization_code
-            redirect-uri: ${KAKAO_REDIRECT_URI:http://localhost:8080/login/oauth2/code/kakao}
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
             scope:
               - profile_nickname
               - account_email
@@ -79,7 +79,7 @@ spring:
             client-id: ${NAVER_CLIENT_ID}
             client-secret: ${NAVER_CLIENT_SECRET}
             authorization-grant-type: authorization_code
-            redirect-uri: ${NAVER_REDIRECT_URI:http://localhost:8080/login/oauth2/code/naver}
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
             scope:
               - name
               - email
@@ -112,7 +112,7 @@ springdoc:
 # Security 설정
 security:
   rememberme:
-    key: ${REMEMBER_ME_KEY:trading-pt-remember-me}
+    key: ${REMEMBER_ME_KEY}
     validity-seconds: 1209600
 
 # 서버 설정
