--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -33,7 +33,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
