--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -27,8 +27,7 @@ spring:
     store-type: redis
     timeout: 7d
     redis:
-      namespace: tpt
-      flush-mode: on-save
+      flush-mode: immediate
       repository-type: indexed
 
   jpa:
@@ -54,12 +53,4 @@ aws:
     region: ${AWS_REGION}
     bucket-name: ${S3_BUCKET_NAME}
 
-server:
-  servlet:
-    session:
-      cookie:
-        name: JSESSIONID
-        http-only: true
-        secure: false
-        same-site: Lax
-        path: /
+
