--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -71,12 +71,14 @@ server:
 
 app:
   frontend:
-    base-url: http://localhost:3000
+    base-url: https://localhost:3000
   cors:
     allowed-origins:
       - https://dev.tradingpt.shop
       - http://localhost:3000
+      - https://localhost:3000
       - http://localhost:5173
+      - https://localhost:5173
   swagger:
     servers:
       - url: https://dev.tradingpt.shop
