:sparkles: feat: CORS exposed headers 설정 및 XSRF-TOKEN 헤더 추가
- `CorsProperties`에 exposed headers 필드를 추가하고 관련 로직을 보완했습니다.
- `application.yml`과 `application-dev.yml`에 XSRF-TOKEN을 노출하도록 설정을 추가했습니다.
- `CsrfCookieFilter`에서 XSRF-TOKEN 헤더를 설정하도록 수정했습니다.

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -78,6 +78,8 @@ app:
       - https://dev.tradingpt.shop
       - http://localhost:3000
       - http://localhost:5173
+    exposed-headers:
+      - XSRF-TOKEN
   swagger:
     servers:
       - url: https://dev.tradingpt.shop
