feat: cors 헤더 추가

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -82,7 +82,7 @@ app:
     
     exposed-headers:
       - XSRF-TOKEN
-      
+      - X-XSRF-TOKEN
   swagger:
     servers:
       - url: https://dev.tradingpt.shop
