--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -35,7 +35,7 @@ spring:
   # JPA 설정 (개발 환경)
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: false
     properties:
       hibernate:
@@ -71,14 +71,12 @@ server:
 
 app:
   frontend:
-    base-url: https://localhost:3000
+    base-url: https://www.tradingpt.kr
   cors:
     allowed-origins:
       - https://dev.tradingpt.shop
-      - http://localhost:3000
       - https://localhost:3000
-      - http://localhost:5173
-      - https://localhost:5173
+      - https://www.tradingpt.kr
     
     exposed-headers:
       - XSRF-TOKEN
