--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'            // 이메일 발송 기능
     implementation 'org.springframework.boot:spring-boot-starter-actuator'        // 모니터링 및 관리 엔드포인트 (Health Check 등)
     implementation 'com.fasterxml.jackson.core:jackson-databind'                  // JSON 직렬화
+    implementation 'net.javacrumbs.shedlock:shedlock-spring:5.13.0'               // ShedLock core + Spring 지원
+    implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:5.13.0'// JDBC 기반 락
+
     // 외부 라이브러리들
     implementation 'net.nurigo:sdk:4.2.7'                                        // Solapi(CoolSMS) SMS 발송 서비스
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'     // Swagger/OpenAPI 문서화 및 UI
