--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -174,6 +174,7 @@ nicepay:
   api:
     base-url: https://webapi.nicepay.co.kr/webapi
     billing-register-path: /billing/cardbill_regist.jsp
+    billing-direct-register-path: /billing/billing_regist.jsp
     billing-delete-path: /billing/billkey_remove.jsp
   credentials:
     mid: ${NICEPAY_MID}
