--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -84,7 +84,7 @@ app:
       - X-XSRF-TOKEN
   swagger:
     servers:
-      - url: https://dev.tradingpt.shop
+      - url: https://dev.tradingpt.kr
         description: Dev API 서버
 
 # NicePay 로컬/테스트 환경 설정
