:sparkles: feat: 정기 결제 서비스 및 예외 처리 로직 추가
- PaymentCommandService 추가 및 정기 결제 생성, 상태 변경 메서드 구현
- 결제 관련 예외 처리 클래스(PaymentErrorStatus, PaymentException) 정의
- 결제 데이터 접근을 위한 PaymentRepository 및 DTO 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -176,6 +176,7 @@ nicepay:
     billing-register-path: /billing/cardbill_regist.jsp
     billing-direct-register-path: /billing/billing_regist.jsp
     billing-delete-path: /billing/billkey_remove.jsp
+    billing-approve-path: /billing/billing_approve.jsp
   credentials:
     mid: ${NICEPAY_MID}
     merchant-key: ${NICEPAY_MERCHANT_KEY}
