:sparkles: feat: 완강 후 통계 수집 로직 및 DTO 필드 추가
- 완강 후 진입 타점 통계 수집 로직(courseStatus 조건) 추가
- AfterCompletedGeneralMonthlySummaryDTO에 새로운 필드(courseStatus, investmentType 등) 추가
- local 환경 datasource 설정을 dev 환경으로 변경

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,9 +4,9 @@ spring:
       on-profile: local
 
   datasource:
-    url: jdbc:mysql://localhost:3306/${LOCAL_DB_NAME:tpt_local_db}?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
-    username: ${LOCAL_DB_USERNAME:root}
-    password: ${LOCAL_DB_PASSWORD:ehdfprl77}
+    url: jdbc:mysql://localhost:3307/${DEV_DB_NAME}?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
+    username: ${DEV_DB_USERNAME}
+    password: ${DEV_DB_PASSWORD}
     hikari:
       pool-name: HikariCP-Local
 
