:sparkles: feat: OAuth2 클라이언트 설정 추가 및 CI/CD 문서 개선
- 운영 환경용 OAuth2 클라이언트 설정(kakao/naver) 추가
- `application-prod.yml` 파일에 client-id, client-secret 변수 및 redirect-uri 포함
- CI/CD 문서 테이블 레이아웃 및 YAML 포맷 일관성 개선

--- a/appspec.yml
+++ b/appspec.yml
@@ -3,10 +3,10 @@ os: linux
 
 files:
   - source: /
-    destination: /home/ubuntu/tpt-server-dev
+    destination: /home/ubuntu/tpt-server
 
 permissions:
-  - object: /home/ubuntu/tpt-server-dev
+  - object: /home/ubuntu/tpt-server
     owner: ubuntu
     group: ubuntu
 
