--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -38,6 +38,20 @@ spring:
       flush-mode: immediate
       repository-type: indexed
 
+  # OAuth2 설정 (운영 환경)
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: ${KAKAO_CLIENT_ID}
+            client-secret: ${KAKAO_CLIENT_SECRET}
+            redirect-uri: https://api.tradingpt.kr/login/oauth2/code/kakao
+          naver:
+            client-id: ${NAVER_CLIENT_ID}
+            client-secret: ${NAVER_CLIENT_SECRET}
+            redirect-uri: https://api.tradingpt.kr/login/oauth2/code/naver
+
   # JPA 설정 (운영 환경)
   jpa:
     hibernate:
