--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -90,7 +90,7 @@ server:
         secure: true
         same-site: Lax
         path: /
-        domain: .tradingpt.kr
+#        domain: .tradingpt.kr
 
 app:
   frontend:
