--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -58,7 +58,8 @@ aws:
     access-key: ${AWS_ACCESS_KEY_ID}
     secret-key: ${AWS_SECRET_ACCESS_KEY}
     region: ${AWS_REGION}
-    bucket-name: ${S3_BUCKET_NAME}
+    public-bucket: ${S3_BUCKET_NAME}
+    private-bucket: ${S3_PRIVATE_BUCKET_NAME}
 
 server:
   servlet:
