--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -195,3 +195,9 @@ logging:
     org.springframework.security: DEBUG
     com.tradingpt.tpt_api.auth.filter: DEBUG
     org.springframework.security.web.authentication.rememberme: DEBUG
+
+# CloudFront (prod 제외 공통)
+cloudfront:
+  domain: ${CLOUDFRONT_DOMAIN}
+  keyPairId: ${CLOUDFRONT_KEY_PAIR_ID}
+  privateKey: ${CLOUDFRONT_PRIVATE_KEY}
