fix: .yml파일 설정 위치 변경

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -64,4 +64,8 @@ nicepay:
   feign:
     logger-level: FULL
 
-
+# CloudFront (prod 제외 공통)
+cloudfront:
+  domain: ${CLOUDFRONT_DOMAIN}
+  keyPairId: ${CLOUDFRONT_KEY_PAIR_ID}
+  privateKey: ${CLOUDFRONT_PRIVATE_KEY}
