--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -64,6 +64,7 @@ aws:
 server:
   servlet:
     session:
+      timeout: 3h
       cookie:
         http-only: true
         secure: true          # 운영/Dev에서 HTTPS면 true
