fix : 레벨테스트 문제 해결 및 세션 관리 설정 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,6 +34,7 @@ spring:
   # 공통 세션 설정
   servlet:
     session:
+      timeout: 24h
       store-type: redis
       tracking-modes: cookie
     multipart:
