:recycle: refactor: Docker 이미지 정리 옵션 추가
- `docker image prune` 명령어에 `-a` 옵션 추가로 태그된 미사용 이미지도 삭제 가능하도록 변경.
- 스크립트 유지 보수성을 향상.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -131,12 +131,11 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info
+        include: health,info,metrics,prometheus  # metrics 추가
   endpoint:
     health:
       show-details: when-authorized
-  info:
-    env:
+    metrics:
       enabled: true
 
 # 애플리케이션 설정
