:sparkles: feat: 고객 테이블 피드백 요청 관련 기능 추가 [skip ci]

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -97,7 +97,7 @@ server:
         secure: true
         same-site: Lax
         path: /
-        domain: .tradingpt.kr
+#        domain: .tradingpt.kr
 
 app:
   frontend:
