:recycle: refactor: k6 테스트 스크립트 개선 및 피드백 요청 크기 변경
- Feedback Requests API 호출 시 size를 10에서 50으로 수정.
- 404 상태 코드를 정상 결과로 처리하도록 로직 변경.
- 테스트 스크립트 내 메트릭 계산 및 출력 로직 정리.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -196,7 +196,7 @@ aligo:
   user-id: "${ALIGO_USER_ID}"
   api-key: "${ALIGO_API_KEY}"
   senderkey: "${ALIGO_SENDER_KEY}"
-  sender: "${ALIGO_SENDER_NUMBER}"
+  sender: "${ALIGO_SENDER}"
 
   template:
     join: "${ALIGO_TEMPLATE_JOIN}"              # 회원가입 템플릿 코드
