--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ spring:
       on-profile: dev
 
   datasource:
-    url: jdbc:mysql://${DEV_DB_HOST}:3306/${DEV_DB_NAME}?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://${DEV_DB_HOST}:3306/${DEV_DB_NAME}?serverTimezone=Asia/Seoul&characterEncoding=UTF-8&tcpKeepAlive=true&connectTimeout=10000&socketTimeout=60000
     username: ${DEV_DB_USERNAME}
     password: ${DEV_DB_PASSWORD}
     hikari:
