:sparkles: feat: 운영 환경 Hibernate 설정 변경 - ddl-auto 값을 create로 수정
- 운영 환경에서 Hibernate DDL 설정을 create로 변경.
- 데이터베이스 초기화 방식을 업데이트하여 초기 데이터 설정 가능.

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -58,7 +58,7 @@ spring:
   # JPA 설정 (운영 환경)
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     show-sql: false
     properties:
       hibernate:
