:sparkles: feat: HikariCP 설정 및 커넥션 풀 최적화 변경
- `maximum-pool-size`를 10에서 20으로 증가하여 동시 커넥션 증가에 대응.
- `connection-timeout`을 20초에서 10초로 단축해 Cascading Failure 방지.
- `keepalive-time`을 0으로 설정하여 Stale Connection 이슈 해결.

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,6 +10,28 @@ spring:
     hikari:
       pool-name: HikariCP-Dev
 
+      # 커넥션 풀 크기
+      maximum-pool-size: 20
+      minimum-idle: 5
+
+      # 유휴 커넥션 정리
+      idle-timeout: 300000              # 5분 (적절)
+
+      # RDS 환경에서 가장 안전한 max-lifetime
+      max-lifetime: 1800000             # 30분 (권장)
+
+      # Stale connection 방지 (keepalive 제거)
+      keepalive-time: 0                 # 반드시 0 (문제의 핵심 해결)
+
+      # 커넥션이 끊겼는지 즉시 감지
+      validation-timeout: 5000
+
+      # 커넥션 누수 감지
+      leak-detection-threshold: 5000    # 5초로 조기 감지
+
+      # 풀에서 커넥션 가져올 때 최대 대기 시간
+      connection-timeout: 10000         # 10초
+
   # Redis 설정
   data:
     redis:
